--- a/src/cadastro/CadAluno.form
+++ b/src/cadastro/CadAluno.form
@@ -271,6 +271,10 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="idTurma">
+          <Events>
+            <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="idTurmaFocusGained"/>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="idTurmaFocusLost"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
